[tool.poetry]
name = "babyagi"
version = "0.1.0"
description = ""
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "1.4.0"
openai = "0.27.4"
pinecone-client = "2.2.1"
pre-commit = ">=3.2.0"
python-dotenv = "1.0.0"
chromadb = "^0.3.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
